Second Commit. Bug fixes

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <section class="introduction" id="introduction">
         <h2>Introduction</h2>
         <p>Hello there!</p>
-        <p> My name is Patrick Kafumukache, and I am a software developer. I specialise in Python, but I am also skilled in Database administration, Full Stack Development and Project Management.</p>
-        <p>If you would like to get in touch about potential collaborations, or long term partnerships, feel free to get in touch via the details provided below!</p>
+        <p> My name is Patrick Kafumukache. As a skilled software developer, I leverage my expertise in Python to drive innovative solutions. With a strong background in Database Administration, Full Stack Development, and Project Management, I excel in delivering high-quality projects that meet clients' needs.</p>
+        <p>If you're interested in exploring potential collaborations or long-term partnerships, I'd be delighted to connect. Please feel free to reach out to me via the contact information provided below.</p>
     </section>
 
  <!-- Skills -->
@@ -49,11 +49,10 @@
             <p>Email: patrick.kafumukache7@gmail.com</p>
             <p>Social Media: </p>
             <ul>
-                <li><a href="https://www.facebook.com/profile.php?id=100085545582083" target="_blank"><iclass="fa-brands fa-facebook"></i></a></li>
-                <li><a href="https://github.com/WegenerSteven" target="_blank"><i class="fa-brands fa-github"></i></a></li>
-                <li><a href="https://twitter.com/wegsteve001" target="_blank"><i class="fa-brands fa-twitter-square"></i> </a></li>
-                <li><a href="https://www.instagram.com/wegener1601/" target="_blank"><i class="fa-brands fa-instagram"></i> </a></li> 
-                <li><a href="https://www.linkedin.com/in/benard-shikhule-3055192a6/" target="_blank"><i class="fa-brands fa-linkedin"></i> </a></li>
+                <li><a href="https://github.com/PixelPat0" target="_blank"><i class="fa-brands fa-github"></i></a></li>
+                <li><a href="" target="_blank"><i class="fa-brands fa-twitter-square"></i> </a></li>
+                <li><a href="https://www.instagram.com/patrick_kafumukache_ii/" target="_blank"><i class="fa-brands fa-instagram"></i> </a></li> 
+                <li><a href="https://www.linkedin.com/in/pat0/" target="_blank"><i class="fa-brands fa-linkedin"></i> </a></li>
             </ul>
     </section>
 
